--- a/main.html
+++ b/main.html
@@ -1,33 +1,52 @@
-<!DOCTYPE html>
+// Multiple Promises Resolution Tracker
 
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-      crossorigin="anonymous"
-    />
-  </head>
-
-  <body>
-    <!-- the entire body must be written by student -->
-    <table class="table table-striped table-hover table-bordered">
-      <thead>
-        <tr>
-          <th>Promise Name</th>
-          <th>Time taken (s)</th>
-        </tr>
-      </thead>
-      <tbody id="output"></tbody>
+// HTML Structure
+document.body.innerHTML = `
+    <table border="1">
+        <thead>
+            <tr>
+                <th>Promise</th>
+                <th>Time Taken (Seconds)</th>
+            </tr>
+        </thead>
+        <tbody id="output">
+            <tr>
+                <td colspan="2">Loading...</td>
+            </tr>
+        </tbody>
     </table>
+`;
 
-    <script type="text/javascript" src="./script.js"></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+// Function to create a promise that resolves after a random time between 1 and 3 seconds
+function createPromise(id) {
+    const time = (Math.random() * 2 + 1).toFixed(3); // Random time between 1 and 3 seconds
+    return new Promise(resolve => {
+        setTimeout(() => resolve({ id, time }), time * 1000);
+    });
+}
+
+// Creating three promises
+const promises = [
+    createPromise(1),
+    createPromise(2),
+    createPromise(3)
+];
+
+// Wait for all promises to resolve
+Promise.all(promises).then(results => {
+    const output = document.getElementById("output");
+    output.innerHTML = ""; // Clear loading row
+
+    let maxTime = 0;
+    results.forEach(result => {
+        const row = document.createElement("tr");
+        row.innerHTML = `<td>Promise ${result.id}</td><td>${result.time}</td>`;
+        output.appendChild(row);
+        maxTime = Math.max(maxTime, parseFloat(result.time));
+    });
+
+    // Add total time row
+    const totalRow = document.createElement("tr");
+    totalRow.innerHTML = `<td>Total</td><td>${maxTime.toFixed(3)}</td>`;
+    output.appendChild(totalRow);
+});
